--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,7 +4,7 @@
     font-weight: 400;
     font-style: normal;
     font-display: swap;
-  }
+}
 
 @font-face {
     font-family: 'Migra';
@@ -37,7 +37,7 @@
 html, body, #root {
     margin: 0;
     padding: 0;
-    height: 100%;
+    height: auto;
     width: 100%;
-    box-sizing: border-box; /* Ensure padding is included in element width */
+    box-sizing: border-box;
 }
