--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -34,12 +34,32 @@
     font-style: italic;
 }
 
+@font-face {
+    font-family: 'SF-Pro-Display';
+    src: url('./fonts/SFPRODISPLAYREGULAR.OTF') format('truetype');
+    font-weight: 400;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'SF-Pro-Display';
+    src: url('./fonts/SFPRODISPLAYMEDIUM.OTF') format('truetype');
+    font-weight: 600;
+    font-style: bold;
+}
+
+@font-face {
+    font-family: 'SF-Pro-Display';
+    src: url('./fonts/SFPRODISPLAYLIGHTITALIC.OTF') format('truetype');
+    font-weight: 200;
+    font-style: italic;
+}
+
 html, body, #root {
     margin: 0;
     padding: 0;
     height: auto;
     width: 100%;
     box-sizing: border-box;
-    padding-bottom: 6em;
 }
 
